--- a/index.html
+++ b/index.html
@@ -56,7 +56,8 @@ completely satisfied with the end result.
             </div>
         </div>
         <div class="row">
-            <div class="col-md-4 services">
+            <div class="col-md-4">
+            <div class="services hidden-sm hidden-xs"></div>
             <p>
                 Services I offer include:
             </p>
