--- a/index.html
+++ b/index.html
@@ -50,9 +50,9 @@
         <div class="row">
             <div class="col-md-12">
  AJIVES Ltd  Property Renovation, Based in Bingley, West Yorkshire, offers a fast, reliable and friendly service to
-domestic and commercial customers. I have over 8 years experience in property renovation and pride myself on the
-quality of work and the personal service I offer. From the initial enquiry to the final fit, I ensure that every client is
-completely satisfied with the end result.
+<br/>domestic and commercial customers. I have over 8 years experience in property renovation and pride myself on the
+<br/>quality of work and the personal service I offer. From the initial enquiry to the final fit, I ensure that every client is
+<br/>completely satisfied with the end result.
             </div>
         </div>
         <div class="row">
