--- a/index.html
+++ b/index.html
@@ -162,11 +162,12 @@ completely satisfied with the end result.
                                                  <blockquote class="pull-right">
                                 <p class="text-left">
                                     "Tony fitted a new kitchen and bathroom for me. He was courteous, reliable and helpful, going out of his way to accommodate my requirements. I was completely delighted with the finished product. The work was to an excellent standard, and he left the house in immaculate condition. I would strongly recommend Tony for his reliability and the quality of his work."
+                                      <span class="person">
+                                        Ms K. Moore
+                                    </span>
                                 </p>
                                 <p>
-                                    <small>
-                                        Ms K. Moore
-                                    </small>
+                                  
                             </blockquote>
         </div>
         <footer class="text-right">
