--- a/index.html
+++ b/index.html
@@ -21,167 +21,186 @@
         <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
         <script>window.html5 || document.write('<script src="js/vendor/html5shiv.js"><\/script>')</script>
         <![endif]-->
-</head>
-<body>
+    </head>
+    <body>
 
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron css3gradient">
-        <div class="container">
-            <div class="row">
-                <div class="col-md-4">
-                    <p class="pull-left text-left contact-info">
-                        <span class="contact-info-tel">Tel: 07770 701323</span><br />
-                        Email: info@ajives-renovation.co.uk<br />
-                        Email: ivesplumbing@live.co.uk
-                    </p>
+        <!-- Main jumbotron for a primary marketing message or call to action -->
+        <div class="jumbotron css3gradient">
+            <div class="container">
+                <div class="row">
+                    <div class="col-md-4">
+                        <p class="pull-left text-left contact-info">
+                            <span class="contact-info-tel">Tel: 07770 701323</span><br />
+                            Email: info@ajives-renovation.co.uk<br />
+                            Email: ivesplumbing@live.co.uk
+                        </p>
+                    </div>
+                    <div class="col-md-4">
+                        <img src="img/logo.png" width="250" class="img-responsive text-center">
+                    </div>
+                    <div class="col-md-4"></div>
                 </div>
-                <div class="col-md-4">
-                    <img src="img/logo.png" width="250" class="img-responsive text-center">
-                </div>
-                <div class="col-md-4"></div>
+
             </div>
-
         </div>
-    </div>
+        <div class="container">
 
-    <div class="container">
+        <!--Nav ref http://medialoot.com/blog/how-to-create-a-responsive-navigation-menu-using-only-css/-->
+            <nav>
+                <label for="show-menu" class="show-menu">Show Menu</label>
+                <input type="checkbox" id="show-menu" role="button"> 
+                <ul id="menu">
+                    <li><a href="#">Bathrooms</a></li>
+                    <li><a href="#">Kitchens</a></li>
+                    <li><a href="#">Renovations</a></li>
+                    <li><a href="#">Plumbing</a></li>
+                    <li><a href="#">Cad Design</a></li>
+                    <li><a href="#">Contact</a></li>
+                </li>
+            </ul>
+        </nav>
+        <!--Nav-->
+        <!--Content Begins -->
+
         <!-- Example row of columns -->
         <div class="row">
             <div class="col-md-12">
- AJIVES Ltd  Property Renovation, Based in Bingley, West Yorkshire, offers a fast, reliable and friendly service to
-domestic and commercial customers. I have over 8 years experience in property renovation and pride myself on the
-quality of work and the personal service I offer. From the initial enquiry to the final fit, I ensure that every client is
-completely satisfied with the end result.
-            </div>
-        </div>
-        <div class="row">
-            <div class="col-md-4">
+             AJIVES Ltd  Property Renovation, Based in Bingley, West Yorkshire, offers a fast, reliable and friendly service to
+             domestic and commercial customers. I have over 8 years experience in property renovation and pride myself on the
+             quality of work and the personal service I offer. From the initial enquiry to the final fit, I ensure that every client is
+             completely satisfied with the end result.
+         </div>
+     </div>
+     <div class="row">
+        <div class="col-md-4">
             <div class="services hidden-sm hidden-xs"></div>
             <p>
                 Services I offer include:
             </p>
-                <ul>
-                    <li>Property development and renovations</li>
-                    <li>Bathroom design and installation</li>
-                    <li>Kitchen design and installation</li>
-                    <li>Domestic plumbing installations and repairs</li>
-                    <li>Wall and floor tiling</li>
-                    <li>Flooring</li>
-                    <li>General Home improvements</li>
-                </ul>
-            </div>
-            <div class="col-md-8">
-                <!--Carousel Start-->
-                <div id="myCarousel" class="carousel slide" data-ride="carousel">
-                    <!-- Carousel indicators -->
-                    <ol class="carousel-indicators">
-                        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-                        <li data-target="#myCarousel" data-slide-to="1"></li>
-                        <li data-target="#myCarousel" data-slide-to="2"></li>
-                        <li data-target="#myCarousel" data-slide-to="3"></li>
-                        <li data-target="#myCarousel" data-slide-to="4"></li>
-                        <li data-target="#myCarousel" data-slide-to="5"></li>
-                        <li data-target="#myCarousel" data-slide-to="6"></li>
-                        <li data-target="#myCarousel" data-slide-to="7"></li>
-                        <li data-target="#myCarousel" data-slide-to="8"></li>
-                        <li data-target="#myCarousel" data-slide-to="9"></li>
-                        <li data-target="#myCarousel" data-slide-to="10"></li>
-                        <li data-target="#myCarousel" data-slide-to="11"></li>
-                        <li data-target="#myCarousel" data-slide-to="12"></li>
-                        <li data-target="#myCarousel" data-slide-to="13"></li>
-                        <li data-target="#myCarousel" data-slide-to="14"></li>
-                        <li data-target="#myCarousel" data-slide-to="15"></li>
-                    </ol>
-                    <!-- Wrapper for carousel items -->
-                    <div class="carousel-inner">
-                        <div class="item active">
-                            <img src="img/bathroom/DP005.jpg">
-                        </div>
-                        <div class="item">
-                            <img src="img/bathroom/DP006.jpg">
-                        </div>
-                        <div class="item">
-                            <img src="img/kitchen/MFK001.jpg">
-                        </div>
-                        <div class="item">
-                            <img src="img/kitchen/MFK007.jpg">
-                        </div>
-                        <div class="item">
-                            <img src="img/bathroom/KR003.jpg">
-                        </div>
-                        <div class="item">
-                            <img src="img/kitchen/RBK002.jpg">
-                        </div>
-                        <div class="item">
-                            <img src="img/kitchen/RBK003.jpg">
-                        </div>
-                        <div class="item">
-                            <img src="img/bathroom/MFB003.jpg">
-                        </div>
-                        <div class="item">
-                            <img src="img/bathroom/MFB006.jpg">
-                        </div>
-                        <div class="item">
-                            <img src="img/bathroom/MFE001.jpg">
-                        </div>
-                        <div class="item">
-                            <img src="img/kitchen/SW006.jpg">
-                        </div>
-                        <div class="item">
-                            <img src="img/kitchen/SW009.jpg">
-                        </div>
-                        <div class="item">
-                            <img src="img/bathroom/RBB001.jpg">
-                        </div>
-                        <div class="item">
-                            <img src="img/bathroom/RBB003.jpg">
-                        </div>
-                        <div class="item">
-                            <img src="img/bathroom/RBB005.jpg">
-                        </div>
+            <ul>
+                <li>Property development and renovations</li>
+                <li>Bathroom design and installation</li>
+                <li>Kitchen design and installation</li>
+                <li>Domestic plumbing installations and repairs</li>
+                <li>Wall and floor tiling</li>
+                <li>Flooring</li>
+                <li>General Home improvements</li>
+            </ul>
+        </div>
+        <div class="col-md-8">
+            <!--Carousel Start-->
+            <div id="myCarousel" class="carousel slide" data-ride="carousel">
+                <!-- Carousel indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                    <li data-target="#myCarousel" data-slide-to="1"></li>
+                    <li data-target="#myCarousel" data-slide-to="2"></li>
+                    <li data-target="#myCarousel" data-slide-to="3"></li>
+                    <li data-target="#myCarousel" data-slide-to="4"></li>
+                    <li data-target="#myCarousel" data-slide-to="5"></li>
+                    <li data-target="#myCarousel" data-slide-to="6"></li>
+                    <li data-target="#myCarousel" data-slide-to="7"></li>
+                    <li data-target="#myCarousel" data-slide-to="8"></li>
+                    <li data-target="#myCarousel" data-slide-to="9"></li>
+                    <li data-target="#myCarousel" data-slide-to="10"></li>
+                    <li data-target="#myCarousel" data-slide-to="11"></li>
+                    <li data-target="#myCarousel" data-slide-to="12"></li>
+                    <li data-target="#myCarousel" data-slide-to="13"></li>
+                    <li data-target="#myCarousel" data-slide-to="14"></li>
+                    <li data-target="#myCarousel" data-slide-to="15"></li>
+                </ol>
+                <!-- Wrapper for carousel items -->
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img src="img/bathroom/DP005.jpg">
                     </div>
-                    <!-- Carousel controls -->
-                    <a class="carousel-control left" href="#myCarousel" data-slide="prev">
-                        <span class="glyphicon glyphicon-chevron-left"></span>
-                    </a>
-                    <a class="carousel-control right" href="#myCarousel" data-slide="next">
-                        <span class="glyphicon glyphicon-chevron-right"></span>
-                    </a>
+                    <div class="item">
+                        <img src="img/bathroom/DP006.jpg">
+                    </div>
+                    <div class="item">
+                        <img src="img/kitchen/MFK001.jpg">
+                    </div>
+                    <div class="item">
+                        <img src="img/kitchen/MFK007.jpg">
+                    </div>
+                    <div class="item">
+                        <img src="img/bathroom/KR003.jpg">
+                    </div>
+                    <div class="item">
+                        <img src="img/kitchen/RBK002.jpg">
+                    </div>
+                    <div class="item">
+                        <img src="img/kitchen/RBK003.jpg">
+                    </div>
+                    <div class="item">
+                        <img src="img/bathroom/MFB003.jpg">
+                    </div>
+                    <div class="item">
+                        <img src="img/bathroom/MFB006.jpg">
+                    </div>
+                    <div class="item">
+                        <img src="img/bathroom/MFE001.jpg">
+                    </div>
+                    <div class="item">
+                        <img src="img/kitchen/SW006.jpg">
+                    </div>
+                    <div class="item">
+                        <img src="img/kitchen/SW009.jpg">
+                    </div>
+                    <div class="item">
+                        <img src="img/bathroom/RBB001.jpg">
+                    </div>
+                    <div class="item">
+                        <img src="img/bathroom/RBB003.jpg">
+                    </div>
+                    <div class="item">
+                        <img src="img/bathroom/RBB005.jpg">
+                    </div>
                 </div>
-                <!--Carousel End-->
-
+                <!-- Carousel controls -->
+                <a class="carousel-control left" href="#myCarousel" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                </a>
+                <a class="carousel-control right" href="#myCarousel" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                </a>
             </div>
+            <!--Carousel End-->
+
         </div>
-        <div class="row">
-            <div class="col-md-12">
+    </div>
+    <div class="row">
+        <div class="col-md-12">
            If you are interested in obtaining a quotation, please get in touch either by email or by calling me direct and I will arrange a suitable time to visit and discuss your requirements.
-            </div>
-        </div>
-        <div class="row last-row">
-                                                 <blockquote class="pull-right">
-                                <p class="text-left">
-                                    "Tony fitted a new kitchen and bathroom for me. He was courteous, reliable and helpful, going out of his way to accommodate my requirements. I was completely delighted with the finished product. The work was to an excellent standard, and he left the house in immaculate condition. I would strongly recommend Tony for his reliability and the quality of his work."
-                                      <span class="person">
-                                        Ms K. Moore
-                                    </span>
-                                </p>
-                                <p>
-                                  
-                            </blockquote>
-        </div>
-        <footer class="text-right">
-            AJIVES Limited. Registered in England. Company No. 8647133
-        </footer>
+       </div>
+   </div>
+   <div class="row last-row">
+     <blockquote class="pull-right">
+        <p class="text-left">
+            "Tony fitted a new kitchen and bathroom for me. He was courteous, reliable and helpful, going out of his way to accommodate my requirements. I was completely delighted with the finished product. The work was to an excellent standard, and he left the house in immaculate condition. I would strongly recommend Tony for his reliability and the quality of his work."
+            <span class="person">
+                Ms K. Moore
+            </span>
+        </p>
+        <p>
 
+        </blockquote>
     </div>
 
+    <!--Content Ends -->
+    <footer class="text-right">
+        AJIVES Limited. Registered in England. Company No. 8647133
+    </footer>
 
-    <script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
-    <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+</div>
 
-    <script src="js/vendor/bootstrap.min.js"></script>
 
-    <script src="js/main.js"></script>
+<script src="//ajax.googleapis.com/ajax/libs/jquery/1.11.2/jquery.min.js"></script>
+<script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
+
+<script src="js/vendor/bootstrap.min.js"></script>
+
+<script src="js/main.js"></script>
 </body>
 </html>
