added new pages

--- a/index.html
+++ b/index.html
@@ -47,17 +47,17 @@
         <div class="container">
 
         <!--Nav ref http://medialoot.com/blog/how-to-create-a-responsive-navigation-menu-using-only-css/-->
-            <nav>
+             <nav>
                 <label for="show-menu" class="show-menu">Show Menu</label>
                 <input type="checkbox" id="show-menu" role="button"> 
                 <ul id="menu">
-                    <li><a href="#">Bathrooms</a></li>
-                    <li><a href="#">Kitchens</a></li>
-                    <li><a href="#">Renovations</a></li>
-                    <li><a href="#">Plumbing</a></li>
-                    <li><a href="#">Cad Design</a></li>
-                    <li><a href="#">Contact</a></li>
-                </li>
+                    <li><a href="index.html">Home</a></li>
+                    <li><a href="bathrooms.html">Bathrooms</a></li>
+                    <li><a href="kitchens.html">Kitchens</a></li>
+                    <li><a href="renovations.html">Renovations</a></li>
+                    <li><a href="plumbing.html">Plumbing</a></li>
+                    <li><a href="cad.html">Cad Design</a></li>
+                    <li><a href="contact.html">Contact</a></li>
             </ul>
         </nav>
         <!--Nav-->
