fixed plumbing page

--- a/contact.html
+++ b/contact.html
@@ -73,7 +73,7 @@
                         Bingley<br/>
                         BD16 3JD</p>
                         <br/>
-                        <p>Telephone:<span>07770 701323</span></p>
+                        <p>Telephone:&nbsp;<span class="larger">07770 701323</span></p>
                         <br/>
                         <br/>
                         <p>Email: info@ajives-renovtion.co.uk<br/>
