--- a/plumbing.html
+++ b/plumbing.html
@@ -80,6 +80,7 @@
                 <li>Radiators</li>
             </ul>
     </div>
+</div>
     <!--Content Ends -->
     <footer class="text-right">
         AJIVES Limited. Registered in England. Company No. 8647133
