bulk of work done

--- a/bathrooms.html
+++ b/bathrooms.html
@@ -58,25 +58,25 @@
                     <li><a href="plumbing.html">Plumbing</a></li>
                     <li><a href="cad.html">Cad Design</a></li>
                     <li><a href="contact.html">Contact</a></li>
-            </ul>
-        </nav>
-        <!--Nav-->
-        <!--Content Begins -->
+                </ul>
+            </nav>
+            <!--Nav-->
+            <!--Content Begins -->
 
-        <div class="row">
-            <div class="col-md-4">
-                <div class="services hidden-sm hidden-xs"></div>
-                <p>
-                  Whether looking for a
-                  replacement toilet or a whole new bathroom suite, I provide a
-                  professional design and
-                  installation service to suit your
-                  requirements, working closely with you to ensure that you get what you want. I fit all types of
-                  bathrooms and showers, chosen by you or sourced by me. I'll take care of the plumbing, installation of the suite, tiling, flooring and oversee any electrical work and plastering if required, making sure that you are pleased with the final product.
-              </p>
-          </div>
-          <div class="col-md-8">
-             <blockquote>
+            <div class="row">
+                <div class="col-md-4">
+                    <div class="services hidden-sm hidden-xs"></div>
+                    <p>
+                      Whether looking for a
+                      replacement toilet or a whole new bathroom suite, I provide a
+                      professional design and
+                      installation service to suit your
+                      requirements, working closely with you to ensure that you get what you want. I fit all types of
+                      bathrooms and showers, chosen by you or sourced by me. I'll take care of the plumbing, installation of the suite, tiling, flooring and oversee any electrical work and plastering if required, making sure that you are pleased with the final product.
+                  </p>
+              </div>
+              <div class="col-md-8">
+               <blockquote>
                 <p class="text-left">
                     "It you want a good clean job done then Tony’s your man. He designed and fitted my new bathroom last year in 2014. He was very good at problem solving (which often occurs when dealing with old plumbing) and takes pride in doing a good job. As a result the old bathroom has been completely transformed and is a pleasure to use."
                 </p>
@@ -88,7 +88,8 @@
                     </span>
                 </div>
                 <div class="col-md-5 text-left">
-                    <button class="viewphotos">VIEW PHOTO'S</button> 
+                    <button class="viewphotos" 
+                    data-toggle="modal" data-target="#dp-modal">VIEW PHOTO'S</button>
                 </div>
             </div>
         </blockquote>
@@ -103,7 +104,8 @@
                 </span>
             </div>
             <div class="col-md-5 text-left">
-                <button class="viewphotos">VIEW PHOTO'S</button> 
+                <button class="viewphotos" 
+                data-toggle="modal" data-target="#hc-modal">VIEW PHOTO'S</button>
             </div>
         </div>
     </blockquote>
@@ -119,7 +121,8 @@
             </span>
         </div>
         <div class="col-md-5 text-left">
-            <button class="viewphotos">VIEW PHOTO'S</button> 
+            <button class="viewphotos" 
+            data-toggle="modal" data-target="#kr-modal">VIEW PHOTO'S</button>
         </div>
     </div>
 </blockquote>
@@ -136,16 +139,17 @@
         </span>
     </div>
     <div class="col-md-5 text-left">
-        <button class="viewphotos">VIEW PHOTO'S</button> 
+        <button class="viewphotos" 
+        data-toggle="modal" data-target="#sm-modal">VIEW PHOTO'S</button>
     </div>
 </div>
 </blockquote>
 </div>
 
 <div class="row">
-<div class="col-md-offset-9 col-md-3 text-right">
-<button class="viewphotos full-gallery">VIEW BATHROOM GALLERY</button> 
-</div>
+    <div class="col-md-offset-9 col-md-3 text-right">
+        <button class="viewphotos full-gallery">VIEW BATHROOM GALLERY</button> 
+    </div>
 </div>
 
 </div>
@@ -154,6 +158,243 @@
 <footer class="text-right">
     AJIVES Limited. Registered in England. Company No. 8647133
 </footer>
+
+<!--Modal 1 DP Modal-->
+<div class="modal fade" id="dp-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title"></h4>
+    </div>
+    <div class="modal-body">
+       <!--Carousel Start-->
+       <div id="dp" class="carousel slide" data-interval="false" data-ride="carousel">
+        <!-- Carousel indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#dp" data-slide-to="0" class="active"></li>
+            <li data-target="#dp" data-slide-to="1"></li>
+            <li data-target="#dp" data-slide-to="2"></li>
+            <li data-target="#dp" data-slide-to="3"></li>
+            <li data-target="#dp" data-slide-to="4"></li>
+            <li data-target="#dp" data-slide-to="5"></li>
+            <li data-target="#dp" data-slide-to="6"></li>
+        </ol>
+        <!-- Wrapper for carousel items -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <img src="img/bathrooms-page/DP/DP001.jpg">
+            </div>
+            <div class="item">
+                <img src="img/bathrooms-page/DP/DP002.jpg">
+            </div>
+            <div class="item">
+                <img src="img/bathrooms-page/DP/DP003.jpg">
+            </div>
+            <div class="item">
+                <img src="img/bathrooms-page/DP/DP004.jpg">
+            </div>
+            <div class="item">
+                <img src="img/bathrooms-page/DP/DP005.jpg">
+            </div>
+            <div class="item">
+                <img src="img/bathrooms-page/DP/DP006.jpg">
+            </div>
+        </div>
+        <!-- Carousel controls -->
+        <a class="carousel-control left" href="#dp" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a class="carousel-control right" href="#dp" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
+    </div>
+    <!--Carousel End-->
+
+</div>
+<div class="modal-footer">
+    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+</div>
+</div><!-- /.modal-content -->
+</div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+
+<!--Modal 2 HC Modal-->
+<div class="modal fade" id="hc-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title"></h4>
+    </div>
+    <div class="modal-body">
+       <!--Carousel Start-->
+       <div id="hc" class="carousel slide" data-interval="false" data-ride="carousel">
+        <!-- Carousel indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#hc" data-slide-to="0" class="active"></li>
+            <li data-target="#hc" data-slide-to="1"></li>
+            <li data-target="#hc" data-slide-to="2"></li>
+            <li data-target="#hc" data-slide-to="3"></li>
+            <li data-target="#hc" data-slide-to="4"></li>
+            <li data-target="#hc" data-slide-to="5"></li>
+        </ol>
+        <!-- Wrapper for carousel items -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <img src="img/bathrooms-page/HC/HC001.jpg">
+            </div>
+            <div class="item">
+                <img src="img/bathrooms-page/HC/HC002.jpg">
+            </div>
+            <div class="item">
+                <img src="img/bathrooms-page/HC/HC003.jpg">
+            </div>
+            <div class="item">
+                <img src="img/bathrooms-page/HC/HC004.jpg">
+            </div>
+            <div class="item">
+                <img src="img/bathrooms-page/HC/HC005.jpg">
+            </div>
+            <div class="item">
+                <img src="img/bathrooms-page/HC/HC006.jpg">
+            </div>
+        </div>
+        <!-- Carousel controls -->
+        <a class="carousel-control left" href="#hc" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a class="carousel-control right" href="#hc" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
+    </div>
+    <!--Carousel End-->
+
+</div>
+<div class="modal-footer">
+    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+</div>
+</div><!-- /.modal-content -->
+</div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+
+<!--Modal 3 KR Modal-->
+<div class="modal fade" id="kr-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title"></h4>
+    </div>
+    <div class="modal-body">
+       <!--Carousel Start-->
+       <div id="kr" class="carousel slide" data-interval="false" data-ride="carousel">
+        <!-- Carousel indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#kr" data-slide-to="0" class="active"></li>
+            <li data-target="#kr" data-slide-to="1"></li>
+            <li data-target="#kr" data-slide-to="2"></li>
+            <li data-target="#kr" data-slide-to="3"></li>
+            <li data-target="#kr" data-slide-to="4"></li>
+        </ol>
+        <!-- Wrapper for carousel items -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <img src="img/bathrooms-page/KR/KR001.jpg">
+            </div>
+            <div class="item">
+                <img src="img/bathrooms-page/KR/KR002.jpg">
+            </div>
+            <div class="item">
+                <img src="img/bathrooms-page/KR/KR003.jpg">
+            </div>
+            <div class="item">
+                <img src="img/bathrooms-page/KR/KR004.jpg">
+            </div>
+            <div class="item">
+                <img src="img/bathrooms-page/KR/KR005.jpg">
+            </div>
+        </div>
+        <!-- Carousel controls -->
+        <a class="carousel-control left" href="#kr" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a class="carousel-control right" href="#kr" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
+    </div>
+    <!--Carousel End-->
+
+</div>
+<div class="modal-footer">
+    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+</div>
+</div><!-- /.modal-content -->
+</div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+
+
+<!--Modal 3 SM Modal-->
+<div class="modal fade" id="sm-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+        <h4 class="modal-title"></h4>
+    </div>
+    <div class="modal-body">
+       <!--Carousel Start-->
+       <div id="sm" class="carousel slide" data-interval="false" data-ride="carousel">
+        <!-- Carousel indicators -->
+        <ol class="carousel-indicators">
+            <li data-target="#sm" data-slide-to="0" class="active"></li>
+            <li data-target="#sm" data-slide-to="1"></li>
+            <li data-target="#sm" data-slide-to="2"></li>
+            <li data-target="#sm" data-slide-to="3"></li>
+            <li data-target="#sm" data-slide-to="4"></li>
+            <li data-target="#sm" data-slide-to="5"></li>
+        </ol>
+        <!-- Wrapper for carousel items -->
+        <div class="carousel-inner">
+            <div class="item active">
+                <img src="img/bathrooms-page/SM/SM001.jpg">
+            </div>
+            <div class="item">
+                <img src="img/bathrooms-page/SM/SM002.jpg">
+            </div>
+            <div class="item">
+                <img src="img/bathrooms-page/SM/SM003.jpg">
+            </div>
+            <div class="item">
+                <img src="img/bathrooms-page/SM/SM004.jpg">
+            </div>
+            <div class="item">
+                <img src="img/bathrooms-page/SM/SM005.jpg">
+            </div>
+            <div class="item">
+                <img src="img/bathrooms-page/SM/SM006.jpg">
+            </div>
+        </div>
+        <!-- Carousel controls -->
+        <a class="carousel-control left" href="#sm" data-slide="prev">
+            <span class="glyphicon glyphicon-chevron-left"></span>
+        </a>
+        <a class="carousel-control right" href="#sm" data-slide="next">
+            <span class="glyphicon glyphicon-chevron-right"></span>
+        </a>
+    </div>
+    <!--Carousel End-->
+
+</div>
+<div class="modal-footer">
+    <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+</div>
+</div><!-- /.modal-content -->
+</div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 
 </div>
 
