--- a/kitchens.html
+++ b/kitchens.html
@@ -8,6 +8,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
     <link rel="stylesheet" href="css/bootstrap.min.css">
+    <link rel="stylesheet" href="bower_components/bootstrap-modal-carousel/dist/css/bootstrap-modal-carousel.min.css">
     <style>
         body {
             padding-top: 50px;
@@ -75,20 +76,75 @@
                     </p>
                 </div>
                 <div class="col-md-8">
+                    <blockquote>
+                        <p class="text-left">
+                            "Tony fitted a kitchen for me 2 years ago and I have to say I am still delighted with it.
+                            I was very impressed by the whole service from the design of the kitchen, [ Tony listened to my ideas and
+                            provided 2 designs to choose from ] to the process of fitting the kitchen and the final result. Tony was punctual, worked hard, was meticulous about his standard of work and always cleared up at the end of the day.
+                            I have recommended Tony to my friends and I have had 100% positive feedback about Tony`s work."
+
+
+                        </p>
+
+                        <div class="row">
+                            <div class="col-md-2 text-left person-container">
+                                <span class="person">
+                                    S. Weaver
+                                </span>
+                            </div>
+                            <div class="col-md-5 text-left">
+                                <button class="viewphotos" 
+                                data-toggle="modal" data-target="#sw-modal">VIEW PHOTO'S</button>
+                            </div>
+                        </blockquote>
+                        <blockquote >
+                            <p class="text-left">
+                                "Tony installed a new kitchen in my disabled brother's house in Heaton in August 2012.  He fitted all units,
+                                worktops and appliances as well as tiling floors and walls to a high standard.  He did an excellent job and was good value for money. His follow up on completion and when we wanted a few minor modifications was also prompt and efficient.  We were very pleased with the finished kitchen and I can highly recommend him for your
+                                consideration."
+
+
+                            </p>
+                            <div class="row">
+                              <div class="col-md-2 text-left person-container">
+                                <span class="person">
+                                    Mrs J Richardson
+                                </span>
+                            </div>
+                            <div class="col-md-5 text-left">
+                               <button class="viewphotos" 
+                               data-toggle="modal" data-target="#jr-modal">VIEW PHOTO'S</button>
+                           </div>
+                       </div>
+                   </blockquote>
+                   <blockquote>
+                    <p class="text-left">
+                        "Tony helped us design our kitchen in 2008.  He fitted all the new units, surfaces and tiles with meticulous
+                        accuracy and is also a cheerful, quick and good humoured worker.  It is now 2015 and we are still delighted with our kitchen.  Thanks Tony."
+                    </p>
+                    <div class="row">
+                        <div class="col-md-2 text-left person-container">    
+                            <span class="person">
+                                Madeline, Shipley
+                            </span>
+                        </div>
+                        <div class="col-md-5 text-left">
+                                <button class="viewphotos" 
+                               data-toggle="modal" data-target="#mh-modal">VIEW PHOTO'S</button>
+                        </div>
+                    </div>
+                </blockquote>
                 <blockquote>
                     <p class="text-left">
-                        "Tony fitted a kitchen for me 2 years ago and I have to say I am still delighted with it.
-                        I was very impressed by the whole service from the design of the kitchen, [ Tony listened to my ideas and
-                        provided 2 designs to choose from ] to the process of fitting the kitchen and the final result. Tony was punctual, worked hard, was meticulous about his standard of work and always cleared up at the end of the day.
-                        I have recommended Tony to my friends and I have had 100% positive feedback about Tony`s work."
+                        "I have been very happy with the work on my kitchen. Tony helped me find ways to maximise the limited space I had for the new kitchen suggesting possible layouts and designs. The quality of his work was high and, two years into having the work done, the units still look as new. I found him as good on his tiling skills.
+                        I found Tony trustworthy and reliable, clean and organised in his work. I would use him again in the future."
 
 
                     </p>
-
                     <div class="row">
                         <div class="col-md-2 text-left person-container">
                             <span class="person">
-                                S. Weaver
+                                Paola
                             </span>
                         </div>
                         <div class="col-md-5 text-left">
@@ -96,73 +152,222 @@
                         </div>
                     </div>
                 </blockquote>
-                <blockquote >
-                    <p class="text-left">
-                        "Tony installed a new kitchen in my disabled brother's house in Heaton in August 2012.  He fitted all units,
-                        worktops and appliances as well as tiling floors and walls to a high standard.  He did an excellent job and was good value for money. His follow up on completion and when we wanted a few minor modifications was also prompt and efficient.  We were very pleased with the finished kitchen and I can highly recommend him for your
-                        consideration."
-
-
-                    </p>
-                    <div class="row">
-                      <div class="col-md-2 text-left person-container">
-                        <span class="person">
-                            Mrs J Richardson
-                        </span>
-                    </div>
-                    <div class="col-md-5 text-left">
-                        <button class="viewphotos">VIEW PHOTO'S</button> 
-                    </div>
-                </div>
-            </blockquote>
-            <blockquote>
-                <p class="text-left">
-                    "Tony helped us design our kitchen in 2008.  He fitted all the new units, surfaces and tiles with meticulous
-                    accuracy and is also a cheerful, quick and good humoured worker.  It is now 2015 and we are still delighted with our kitchen.  Thanks Tony."
-                </p>
-                <div class="row">
-                    <div class="col-md-2 text-left person-container">    
-                        <span class="person">
-                            Madeline, Shipley
-                        </span>
-                    </div>
-                    <div class="col-md-5 text-left">
-                        <button class="viewphotos">VIEW PHOTO'S</button> 
-                    </div>
-                </div>
-            </blockquote>
-            <blockquote>
-                <p class="text-left">
-                    "I have been very happy with the work on my kitchen. Tony helped me find ways to maximise the limited space I had for the new kitchen suggesting possible layouts and designs. The quality of his work was high and, two years into having the work done, the units still look as new. I found him as good on his tiling skills.
-                    I found Tony trustworthy and reliable, clean and organised in his work. I would use him again in the future."
-
-
-                </p>
-                <div class="row">
-                    <div class="col-md-2 text-left person-container">
-                        <span class="person">
-                            Paola
-                        </span>
-                    </div>
-                    <div class="col-md-5 text-left">
-                        <button class="viewphotos">VIEW PHOTO'S</button> 
-                    </div>
-                </div>
-            </blockquote>
-        </div>
-
-        <div class="row">
-            <div class="col-md-offset-9 col-md-3 text-right">
-                <button class="viewphotos full-gallery">VIEW KITCHEN GALLERY</button> 
             </div>
+
+            <div class="row" style="display: none;">
+                <div class="col-md-offset-9 col-md-3 text-right">
+                    <button class="viewphotos full-gallery">VIEW KITCHEN GALLERY</button> 
+                </div>
+            </div>
+
         </div>
 
-    </div>
+        <!--Content Ends -->
+        <footer class="text-right">
+            AJIVES Limited. Registered in England. Company No. 8647133
+        </footer>
 
-    <!--Content Ends -->
-    <footer class="text-right">
-        AJIVES Limited. Registered in England. Company No. 8647133
-    </footer>
+
+
+
+
+
+
+<!--Modal 1 SW Modal-->
+        <div class="modal fade" id="sw-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title"></h4>
+            </div>
+            <div class="modal-body">
+ <!--Carousel Start-->
+            <div id="sw" class="carousel slide" data-interval="false" data-ride="carousel">
+                <!-- Carousel indicators -->
+                <ol class="carousel-indicators">
+                    <li data-target="#sw" data-slide-to="0" class="active"></li>
+                    <li data-target="#sw" data-slide-to="1"></li>
+                    <li data-target="#sw" data-slide-to="2"></li>
+                    <li data-target="#sw" data-slide-to="3"></li>
+                    <li data-target="#sw" data-slide-to="4"></li>
+                    <li data-target="#sw" data-slide-to="5"></li>
+                    <li data-target="#sw" data-slide-to="6"></li>
+                    <li data-target="#sw" data-slide-to="7"></li>
+                    <li data-target="#sw" data-slide-to="8"></li>
+                    <li data-target="#sw" data-slide-to="9"></li>
+                </ol>
+                <!-- Wrapper for carousel items -->
+                <div class="carousel-inner">
+                    <div class="item active">
+                        <img src="img/kitchens-page/SW/SW001.jpg">
+                    </div>
+                    <div class="item">
+                        <img src="img/kitchens-page/SW/SW002.jpg">
+                    </div>
+                    <div class="item">
+                        <img src="img/kitchens-page/SW/SW003.jpg">
+                    </div>
+                    <div class="item">
+                        <img src="img/kitchens-page/SW/SW004.jpg">
+                    </div>
+                    <div class="item">
+                        <img src="img/kitchens-page/SW/SW005.jpg">
+                    </div>
+                    <div class="item">
+                        <img src="img/kitchens-page/SW/SW006.jpg">
+                    </div>
+                    <div class="item">
+                        <img src="img/kitchens-page/SW/SW007.jpg">
+                    </div>
+                    <div class="item">
+                        <img src="img/kitchens-page/SW/SW008.jpg">
+                    </div>
+                    <div class="item">
+                        <img src="img/kitchens-page/SW/SW009.jpg">
+                    </div>
+                    <div class="item">
+                        <img src="img/kitchens-page/SW/SW010.jpg">
+                    </div>
+                </div>
+                <!-- Carousel controls -->
+                <a class="carousel-control left" href="#sw" data-slide="prev">
+                    <span class="glyphicon glyphicon-chevron-left"></span>
+                </a>
+                <a class="carousel-control right" href="#sw" data-slide="next">
+                    <span class="glyphicon glyphicon-chevron-right"></span>
+                </a>
+            </div>
+            <!--Carousel End-->
+
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+
+<!--Modal 2 JR Modal-->
+        <div class="modal fade" id="jr-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title"></h4>
+            </div>
+            <div class="modal-body">
+                    <!--Carousel Start-->
+        <div id="jr" class="carousel slide" data-interval="false" data-ride="carousel"  aria-hidden="true">
+            <!-- Carousel indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#jr" data-slide-to="0" class="active"></li>
+                <li data-target="#jr" data-slide-to="1"></li>
+                <li data-target="#jr" data-slide-to="2"></li>
+                <li data-target="#jr" data-slide-to="3"></li>
+                <li data-target="#jr" data-slide-to="4"></li>
+                <li data-target="#jr" data-slide-to="5"></li>
+                <li data-target="#jr" data-slide-to="6"></li>
+            </ol>
+            <!-- Wrapper for carousel items -->
+            <div class="carousel-inner">
+                <div class="item active">
+                    <img src="img/kitchens-page/jr/jr001.jpg">
+                </div>
+                <div class="item">
+                    <img src="img/kitchens-page/jr/jr002.jpg">
+                </div>
+                <div class="item">
+                    <img src="img/kitchens-page/jr/jr003.jpg">
+                </div>
+                <div class="item">
+                    <img src="img/kitchens-page/jr/jr004.jpg">
+                </div>
+                <div class="item">
+                    <img src="img/kitchens-page/jr/jr005.jpg">
+                </div>
+                <div class="item">
+                    <img src="img/kitchens-page/jr/jr006.jpg">
+                </div>
+                <div class="item">
+                    <img src="img/kitchens-page/jr/jr007.jpg">
+                </div>
+            </div>
+            <!-- Carousel controls -->
+            <a class="carousel-control left" href="#jr" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+            </a>
+            <a class="carousel-control right" href="#jr" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+            </a>
+        </div>
+        <!--Carousel End-->
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
+
+<!--Modal 3 MH Modal-->
+        <div class="modal fade" id="mh-modal" tabindex="-1" role="dialog" aria-labelledby="myModalLabel" aria-hidden="true">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                <h4 class="modal-title"></h4>
+            </div>
+            <div class="modal-body">
+                <!--Carousel Start-->
+        <div id="mh" class="carousel slide" data-interval="false" data-ride="carousel"  aria-hidden="true">
+            <!-- Carousel indicators -->
+            <ol class="carousel-indicators">
+                <li data-target="#mh" data-slide-to="0" class="active"></li>
+                <li data-target="#mh" data-slide-to="1"></li>
+                <li data-target="#mh" data-slide-to="2"></li>
+                <li data-target="#mh" data-slide-to="3"></li>
+                <li data-target="#mh" data-slide-to="4"></li>
+                <li data-target="#mh" data-slide-to="5"></li>
+            </ol>
+            <!-- Wrapper for carousel items -->
+            <div class="carousel-inner">
+                <div class="item active">
+                    <img src="img/kitchens-page/mh/mh001.jpg">
+                </div>
+                <div class="item">
+                    <img src="img/kitchens-page/mh/mh002.jpg">
+                </div>
+                <div class="item">
+                    <img src="img/kitchens-page/mh/mh003.jpg">
+                </div>
+                <div class="item">
+                    <img src="img/kitchens-page/mh/mh004.jpg">
+                </div>
+                <div class="item">
+                    <img src="img/kitchens-page/mh/mh005.jpg">
+                </div>
+                <div class="item">
+                    <img src="img/kitchens-page/mh/mh006.jpg">
+                </div>
+            </div>
+            <!-- Carousel controls -->
+            <a class="carousel-control left" href="#mh" data-slide="prev">
+                <span class="glyphicon glyphicon-chevron-left"></span>
+            </a>
+            <a class="carousel-control right" href="#mh" data-slide="next">
+                <span class="glyphicon glyphicon-chevron-right"></span>
+            </a>
+        </div>
+        <!--Carousel End-->
+            </div>
+            <div class="modal-footer">
+                <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+        </div><!-- /.modal-content -->
+    </div><!-- /.modal-dialog -->
+</div><!-- /.modal -->
 
 </div>
 
@@ -171,7 +376,10 @@
 <script>window.jQuery || document.write('<script src="js/vendor/jquery-1.11.2.min.js"><\/script>')</script>
 
 <script src="js/vendor/bootstrap.min.js"></script>
+<script src="bower_components/bootstrap-modal-carousel/dist/js/bootstrap-modal-carousel.min.jsxxx"></script>
 
 <script src="js/main.js"></script>
 </body>
 </html>
+
+<!-- http://alt-web.com/TUTORIALS/?id=bootstrap_modal_carousel_gallery -->
