github pages 404 for images fix

--- a/bathrooms.html
+++ b/bathrooms.html
@@ -243,22 +243,22 @@
         <!-- Wrapper for carousel items -->
         <div class="carousel-inner">
             <div class="item active">
-                <img src="img/bathrooms-page/HC/HC001.jpg">
+                <img src="img/bathrooms/HC/HC001.jpg">
             </div>
             <div class="item">
-                <img src="img/bathrooms-page/HC/HC002.jpg">
+                <img src="img/bathrooms/HC/HC002.jpg">
             </div>
             <div class="item">
-                <img src="img/bathrooms-page/HC/HC003.jpg">
+                <img src="img/bathrooms/HC/HC003.jpg">
             </div>
             <div class="item">
-                <img src="img/bathrooms-page/HC/HC004.jpg">
+                <img src="img/bathrooms/HC/HC004.jpg">
             </div>
             <div class="item">
-                <img src="img/bathrooms-page/HC/HC005.jpg">
+                <img src="img/bathrooms/HC/HC005.jpg">
             </div>
             <div class="item">
-                <img src="img/bathrooms-page/HC/HC006.jpg">
+                <img src="img/bathrooms/HC/HC006.jpg">
             </div>
         </div>
         <!-- Carousel controls -->
