github pages 404 for images fix

--- a/bathrooms.html
+++ b/bathrooms.html
@@ -183,22 +183,22 @@
         <!-- Wrapper for carousel items -->
         <div class="carousel-inner">
             <div class="item active">
-                <img src="img/bathrooms-page/DP/DP001.jpg">
+                <img src="img/bathrooms/DP/DP001.jpg">
             </div>
             <div class="item">
-                <img src="img/bathrooms-page/DP/DP002.jpg">
+                <img src="img/bathrooms/DP/DP002.jpg">
             </div>
             <div class="item">
-                <img src="img/bathrooms-page/DP/DP003.jpg">
+                <img src="img/bathrooms/DP/DP003.jpg">
             </div>
             <div class="item">
-                <img src="img/bathrooms-page/DP/DP004.jpg">
+                <img src="img/bathrooms/DP/DP004.jpg">
             </div>
             <div class="item">
-                <img src="img/bathrooms-page/DP/DP005.jpg">
+                <img src="img/bathrooms/DP/DP005.jpg">
             </div>
             <div class="item">
-                <img src="img/bathrooms-page/DP/DP006.jpg">
+                <img src="img/bathrooms/DP/DP006.jpg">
             </div>
         </div>
         <!-- Carousel controls -->
